kubernetes/grafana/grafana-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-external
  namespace: portal
subsets:
  - addresses:
      - ip: 10.4.10.40
    ports:
      - port: 4000
