kubernetes/grafana/grafana-endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: grafana-external-manual
  namespace: portal
  labels:
    kubernetes.io/service-name: grafana-external

addressType: IPv4

ports:
  - name: http
    port: 4000
    protocol: TCP

endpoints:
  - addresses:
      - 10.4.10.40
    conditions:
      ready: true
